--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Indiana -- Fiction'
+- GITenberg
 title: Rosalind at Red Gate
 url: http://www.gutenberg.org/ebooks/34512
